# valayam

./: .gitignore  Cargo.toml  README.md  architecture.md  e2e_results.txt  features.md  fill_mvps.py  fix_clippy.py  helper.md  load_test_results.txt  results.json  rustfmt.toml  skills-lock.json  test.bat  test.md  test_results.txt
crates/valayam-cli/: Cargo.toml
crates/valayam-cli/.tmpQkRzYd/: plugin.py  plugin.yaml  requirements.txt  run.bat
crates/valayam-cli/.tmpxjPpTw/: plugin.py  plugin.yaml
crates/valayam-cli/src/: cert_auth.rs  cli.rs  main.rs  mitm.rs  notifications.rs  orchestrator.rs  plugin_cli.rs  state.rs
crates/valayam-cli/src/reporting/: compliance.rs  html.rs  markdown.rs  mod.rs  pdf.rs  sarif.rs
crates/valayam-cli/tests/: cli_tests.rs  multi_target_test.rs  multilang_plugin_test.rs  output_formats_test.rs  vpa_plugin_test.rs
crates/valayam-core/: Cargo.toml  README.md  build.rs
crates/valayam-core/benches/: crawler_bench.rs  proxy_bench.rs  rate_limiter_bench.rs  variables_bench.rs
crates/valayam-core/src/: lib.rs
crates/valayam-core/src/core/: crypto.rs  error.rs  executor.rs  grpc_plugin.rs  matcher.rs  matchers.rs  mod.rs  plugin_macro.rs  plugins.rs  rate_limiter.rs  registry.rs  result.rs  scan_result_bridge.rs  traits.rs  unwind_safe.rs  variables.rs  vpa.rs  wasm_plugin.rs
crates/valayam-core/src/core/reporters/: composite.rs  console.rs  json.rs  mod.rs
crates/valayam-core/src/features/: mod.rs
crates/valayam-core/src/features/attack_graph/: analyzer.rs  builder.rs  graph.rs  mod.rs  tests.rs
crates/valayam-core/src/features/auth_logic/: executor.rs  jwt_cracker.rs  mod.rs  parser.rs
crates/valayam-core/src/features/auto_exploit/: engine.rs  parser.rs
crates/valayam-core/src/features/auto_redteam/: executor.rs  mod.rs  parser.rs
crates/valayam-core/src/features/aws_escalate/: executor.rs  mod.rs  parser.rs
crates/valayam-core/src/features/azure_gcp_escalate/: executor.rs  mod.rs  parser.rs
crates/valayam-core/src/features/browser_audit/: executor.rs  mod.rs  parser.rs
crates/valayam-core/src/features/cicd_audit/: executor.rs  mod.rs  parser.rs
crates/valayam-core/src/features/client_secret_audit/: executor.rs  mod.rs  parser.rs
crates/valayam-core/src/features/cloud_sec/: executor.rs  mod.rs  parser.rs
crates/valayam-core/src/features/container_audit/: executor.rs  mod.rs  parser.rs
crates/valayam-core/src/features/cors_audit/: executor.rs  mod.rs  parser.rs
crates/valayam-core/src/features/crawler/: mod.rs  spider.rs  wordlists.rs
crates/valayam-core/src/features/cred_monitor/: executor.rs  mod.rs  parser.rs
crates/valayam-core/src/features/csp_audit/: executor.rs  mod.rs  parser.rs
crates/valayam-core/src/features/ct_log_audit/: executor.rs  mod.rs  parser.rs
crates/valayam-core/src/features/deep_analysis/: artifact_recovery.rs  client_side.rs  executor.rs  llm_mutator.rs  mod.rs  parser.rs
crates/valayam-core/src/features/dependency_audit/: executor.rs  mod.rs  parser.rs  vuln_db.rs
crates/valayam-core/src/features/dns_audit/: executor.rs  mod.rs  parser.rs
crates/valayam-core/src/features/dom_redirect_audit/: executor.rs  mod.rs  parser.rs
crates/valayam-core/src/features/drift_detect/: executor.rs  mod.rs  parser.rs  state.rs
crates/valayam-core/src/features/easm/: alienvault.rs  crtsh.rs  executor.rs  mod.rs  parser.rs
crates/valayam-core/src/features/extractors/: engine.rs  mod.rs  parser.rs
crates/valayam-core/src/features/fuzzer/: executor.rs  mod.rs  parser.rs
crates/valayam-core/src/features/graphql_audit/: executor.rs  mod.rs  mutator.rs  parser.rs
crates/valayam-core/src/features/grpc_audit/: executor.rs  mod.rs  mutator.rs  parser.rs
crates/valayam-core/src/network/: dns.rs  http.rs  mod.rs  tcp.rs  tls.rs  tor.rs  ttls.rs  udp.rs
crates/valayam-core/src/stealth/: mod.rs  proxy.rs  tls.rs  user_agent.rs
crates/valayam-core/src/template/: loader.rs  mod.rs  schema.rs
crates/valayam-core/tests/: crypto_plugin_test.rs  pipeline_integration.rs  reporting_integration.rs  template_e2e.rs  wasm_sandbox_test.rs
crates/valayam-core/tests/common/: mod.rs
crates/valayam-engine/: Cargo.toml  build.rs
crates/valayam-engine/proto/: plugin.proto  valayam.proto
crates/valayam-engine/src/: executor.rs  grpc_plugin.rs  lib.rs  matchers.rs  plugin_macro.rs  registry.rs  traits.rs  variables.rs  vpa.rs  wasm_plugin.rs
crates/valayam-models/: Cargo.toml
crates/valayam-models/src/: bridge.rs  error.rs  finding.rs  lib.rs  result.rs  template_info.rs
crates/valayam-models/src/templates/: auth_logic.rs  auto_redteam.rs  aws_escalate.rs  azure_gcp_escalate.rs  browser_audit.rs  client_secret_audit.rs  cloud_sec.rs  container_audit.rs  cors_audit.rs  cred_monitor.rs  csp_audit.rs  dependency_audit.rs  dns_audit.rs  dom_redirect_audit.rs  easm.rs  extractors.rs  functions.rs  fuzzer.rs  graphql_audit.rs  grpc_audit.rs  header_scorecard.rs  helpers.rs  http_scan.rs  iac_audit.rs  idp_audit.rs  k8s_audit.rs  matcher.rs  mitre_mapping.rs  mobile_audit.rs  mod.rs  network_scan.rs  nuclei_compat.rs  oauth_audit.rs  port_scan.rs  reputation_audit.rs  sast_secrets.rs  sbom_audit.rs  schema.rs  schema_drift.rs  scripting.rs  (+6 more)
crates/valayam-network/: Cargo.toml
crates/valayam-network/src/: lib.rs
crates/valayam-network/src/network/: dns.rs  http.rs  tls.rs
crates/valayam-network/src/stealth/: proxy.rs  tls.rs  user_agent.rs
crates/valayam-plugin-dependency-audit/: Cargo.toml
crates/valayam-plugin-dependency-audit/src/: executor.rs  extractor.rs  lib.rs  vuln_db.rs
crates/valayam-plugin-grpc-example/: Cargo.toml  build.rs
crates/valayam-plugin-grpc-example/src/: main.rs
crates/valayam-plugin-iot-audit/: Cargo.toml
crates/valayam-plugin-iot-audit/src/: executor.rs  lib.rs
crates/valayam-plugin-mobile-audit/: Cargo.toml
crates/valayam-plugin-mobile-audit/src/: lib.rs
crates/valayam-worker/: Cargo.toml
crates/valayam-worker/src/: main.rs
crates/valayam-worker/src/broker/: kafka_driver.rs  mod.rs  p2p.rs  rabbitmq_driver.rs  redis_driver.rs
src/: main.rs
(+294 files in other folders)
