[workspace]
members = [
    "crates/valayam-core",
    "crates/valayam-cli",
    "crates/valayam-worker"
]
resolver = "2"

[workspace.package]
version = "0.1.0"
edition = "2021"

[workspace.dependencies]
tokio = { version = "1.38", features = ["full"] }
serde = { version = "1.0", features = ["derive"] }
serde_yaml = "0.9"
reqwest = { version = "0.12", default-features = false, features = ["rustls-tls", "json", "blocking"] }
rhai = { version = "1.25", features = ["sync", "serde"] }
regex = "1.10"
clap = { version = "4.5", features = ["derive"] }
walkdir = "2.5"
anyhow = "1.0"
thiserror = "1.0"
serde_json = "1.0"
base64 = "0.22"
md5 = "0.7"
sha2 = "0.10"
chrono = { version = "0.4", features = ["serde"] }
futures = "0.3"
governor = "0.6"
url = { version = "2.5", features = ["serde"] }
indicatif = "0.17"
hickory-resolver = "0.24"
x509-parser = "0.16"
rustls-pemfile = "2.0"
rustls = { version = "0.23", features = ["ring"] }
tokio-rustls = "0.26"
rand = "0.8"
hmac = "0.12"
tempfile = "3.10"