[package]
name = "valayam-cli"
version.workspace = true
edition.workspace = true

[dependencies]
valayam-core = { path = "../valayam-core" }
tokio-util = { version = "0.7", features = ["rt"] }
tokio = { workspace = true }
clap = { workspace = true }
walkdir = { workspace = true }
indicatif = { workspace = true }
anyhow = { workspace = true }
futures = { workspace = true }
serde_json = { workspace = true }
tracing = "0.1.44"
tracing-subscriber = { version = "0.3.23", features = ["json", "registry", "env-filter"] }
tracing-appender = "0.2.5"
tracing-opentelemetry = "0.22"
opentelemetry = "0.21"
opentelemetry_sdk = { version = "0.21", features = ["rt-tokio"] }
opentelemetry-otlp = "0.14"
tonic = { workspace = true }
prost = { workspace = true }
rcgen = "0.12"
tokio-rustls = { workspace = true }
rustls = { workspace = true }
rustls-pemfile = { workspace = true }
dirs = "5.0"
time = "0.3"
reqwest = { workspace = true }
hyper = { version = "0.14", features = ["full"] }
serde_yaml = { workspace = true }
serde = { version = "1.0", features = ["derive"] }
genpdf = "0.2.0"
