[package]
name = "valayam-core"
version.workspace = true
edition.workspace = true

[dependencies]
tokio = { workspace = true }
serde = { workspace = true, features = ["derive"] }
serde_yaml = { workspace = true }
reqwest = { workspace = true }
rhai = { workspace = true }
regex = { workspace = true }
anyhow = { workspace = true }
thiserror = { workspace = true }
serde_json = { workspace = true }
base64 = { workspace = true }
md5 = { workspace = true }
sha2 = { workspace = true }
chrono = { workspace = true }
futures = { workspace = true }
governor = { workspace = true }
url = { workspace = true }
hickory-resolver = { workspace = true }
x509-parser = { workspace = true }
rustls-pemfile = { workspace = true }
rustls = { workspace = true }
tokio-rustls = { workspace = true }
rand = { workspace = true }
hmac = { workspace = true }
tracing = "0.1.44"
tracing-opentelemetry = "0.22"
http = { workspace = true }
tonic = { workspace = true }
prost = { workspace = true }
scraper = { workspace = true }
urlencoding = "2.1.3"
wasmparser = { workspace = true }
sourcemap = { workspace = true }
zip = { workspace = true }
hcl-rs = { workspace = true }
graphql-parser = { workspace = true }
jsonwebtoken = { workspace = true }
rumqttc = { workspace = true }
toml = { workspace = true }
lazy_static = { workspace = true }

[features]
sarif = []

[build-dependencies]
tonic-build = { workspace = true }

[dev-dependencies]
tempfile = { workspace = true }
