[package]
name = "valayam-core"
version.workspace = true
edition.workspace = true

[dependencies]
tokio = { workspace = true, features = ["full"] }
async-trait = { workspace = true }
tokio-util = { version = "0.7", features = ["rt"] }
serde = { workspace = true, features = ["derive"] }
serde_yaml = { workspace = true }
reqwest = { workspace = true }
rhai = { workspace = true }
regex = { workspace = true }
anyhow = { workspace = true }
thiserror = { workspace = true }
serde_json = { workspace = true }
base64 = { workspace = true }
md5 = { workspace = true }
sha2 = { workspace = true }
chrono = { workspace = true }
futures = { workspace = true }
governor = { workspace = true }
url = { workspace = true }
hickory-resolver = { workspace = true }
x509-parser = { workspace = true }
rustls-pemfile = { workspace = true }
rustls = { workspace = true }
tokio-rustls = { workspace = true }
rand = { workspace = true }
hmac = { workspace = true }
tracing = "0.1.44"
tracing-opentelemetry = "0.22"
http = { workspace = true }
tonic = { workspace = true }
prost = { workspace = true }
scraper = { workspace = true }
urlencoding = "2.1.3"
wasmparser = { workspace = true }
sourcemap = { workspace = true }
zip.workspace = true
hcl-rs = { workspace = true }
graphql-parser = { workspace = true }
jsonwebtoken = { workspace = true }
rumqttc = { workspace = true }
toml = { workspace = true }
lazy_static = { workspace = true }
wasmtime = "18.0.2"
wasmtime-wasi = "18.0.2"
uuid = { version = "1.24.0", features = ["v4"] }
dirs = "6.0.0"
ed25519-dalek = { version = "2.1.1", features = ["rand_core"] }
rand_core = { version = "0.6.4", features = ["std"] }
notify = "6.1.1"
opentelemetry = { version = "0.21.0", features = ["trace"] }
petgraph = { version = "0.8.3", features = ["serde-1"] }
rusty-axml = "0.2.1"
axum = "0.8.9"

[features]
sarif = []

[build-dependencies]
tonic-build = { workspace = true }

[dev-dependencies]
tempfile = { workspace = true }
wat = "1.253.0"
