[package]
name = "valayam-network"
version.workspace = true
edition.workspace = true

[dependencies]
valayam-models = { workspace = true }
tokio = { workspace = true, features = ["full"] }
reqwest = { workspace = true }
hickory-resolver = { workspace = true }
rustls = { workspace = true }
serde = { workspace = true, features = ["derive"] }
url = { workspace = true }
anyhow = { workspace = true }
governor = { workspace = true }
rand = { workspace = true }
http = { workspace = true }
futures = { workspace = true }
tracing = "0.1"
regex = { workspace = true }
tokio-rustls = { workspace = true }
x509-parser = { workspace = true }
