[package]
name = "valayam-plugin-grpc-example"
version = "0.1.0"
edition = "2021"

[dependencies]
tonic = { workspace = true }
tokio = { workspace = true }
prost = { workspace = true }
tokio-stream = { version = "0.1", features = ["net"] }
serde_json = { workspace = true }

[build-dependencies]
tonic-build = { workspace = true }
