[package]
name = "valayam-plugin-iot-audit"
version.workspace = true
edition.workspace = true

[dependencies]
valayam-engine = { workspace = true }
valayam-models = { workspace = true }
valayam-network = { workspace = true }
tokio = { workspace = true }
serde = { workspace = true, features = ["derive"] }
serde_json = { workspace = true }
async-trait = { workspace = true }
anyhow = { workspace = true }
rumqttc = { workspace = true }

chrono = { workspace = true }
url = { workspace = true }
toml = { workspace = true }
reqwest = { workspace = true }
tracing = "0.1.44"
regex = { workspace = true }
