[package]
name = "valayam-worker"
version.workspace = true
edition.workspace = true

[dependencies]
valayam-core = { path = "../valayam-core" }
tokio = { workspace = true }
anyhow = { workspace = true }
tonic = { workspace = true }
prost = { workspace = true }
serde_json = { workspace = true }
tracing = "0.1.44"
tracing-subscriber = "0.3"
async-trait = { workspace = true }
redis = { workspace = true }
lapin = { workspace = true }
tokio-executor-trait = { workspace = true }
serde = { workspace = true }
clap = { workspace = true }
futures = { workspace = true }
chrono = { workspace = true }
